# PO-SBR-Python

./: README.md
c_optix/: CMakeLists.txt  README.md  main_rcs_optix.cpp  optix_solver.cu  optix_solver.h
c_version/: .gitignore  Makefile  README.md  main_rcs.c  po_solver.c  po_solver.h
